--- a/geekshop/mainapp/templates/mainapp/includes/inc_mainmenu.html
+++ b/geekshop/mainapp/templates/mainapp/includes/inc_mainmenu.html
@@ -21,6 +21,12 @@
             контакты
         </a>
     </li>
+    {% if user.is_superuser %}
+    <li>
+        <a href="{% url 'admin:users' %}">Админка</a>
+    </li>
+    {% endif %}
+
     {% if user.is_authenticated %}
         <li>
             <a href="{% url 'auth:edit' %}">{{ user.first_name|default:'Пользователь' }}</a>
