--- a/geekshop/adminapp/templates/adminapp/category_delete.html
+++ b/geekshop/adminapp/templates/adminapp/category_delete.html
@@ -3,10 +3,10 @@
 
 {% block content %}
     <div class="category-delete">
-        Вы уверены, что хотите удалить {{ category_to_delete.name }}?
+        Вы уверены, что хотите удалить {{ object.name }}?
     </div>
 
-    <form action="{% url 'admin:category_delete' category_to_delete.pk %}" method="POST">
+    <form action="{% url 'admin:category_delete' object.pk %}" method="POST">
     {% csrf_token %}
     <input class="btn btn-danger" type="submit" value="Удалить">
     </form>
