--- a/geekshop/adminapp/templates/adminapp/users.html
+++ b/geekshop/adminapp/templates/adminapp/users.html
@@ -6,7 +6,7 @@
     <button class="new-user">
       <a href="{% url 'admin:user_create' %}">Новый пользователь</a>
     </button>
-    {% for object in objects %}
+    {% for object in object_list %}
       <div class="user-record {% if not object.is_active %}not_active {% endif %}" >
         <img src="/media/{{ object.avatar|default:'users_avatars/default.jpg' }}" alt="{{ object.username }}" class="user-avatar-img">
         <div class="user-role">
