--- a/geekshop/adminapp/templates/adminapp/categories.html
+++ b/geekshop/adminapp/templates/adminapp/categories.html
@@ -6,7 +6,7 @@
     <button class="new-category">
       <a href="{% url 'admin:category_create' %}">Новая категория</a>
     </button>
-    {% for object in objects %}
+    {% for object in object_list %}
       <div class="category-record {% if not object.is_active %}not_active {% endif %}">
         <img src="/media/{{ object.category_image|default:'users_avatars/default.jpg' }}" alt="{{ object.name }}" class="user-avatar-img">
         <div class="category-name">
