--- a/geekshop/adminapp/templates/adminapp/product_delete.html
+++ b/geekshop/adminapp/templates/adminapp/product_delete.html
@@ -3,16 +3,16 @@
 
 {% block content %}
     <div class="category-delete">
-        Вы уверены, что хотите удалить {{ product_to_delete.name }}?
+        Вы уверены, что хотите удалить {{ object.name }}?
     </div>
 
-    <form action="{% url 'admin:product_delete' product_to_delete.pk %}" method="POST">
+    <form action="{% url 'admin:product_delete' object.pk %}" method="POST">
     {% csrf_token %}
     <input class="btn btn-danger" type="submit" value="Удалить">
     </form>
 
   <button class="btn btn-success">
-    <a href="{% url 'admin:products' product_to_delete.category.pk %}">
+    <a href="{% url 'admin:products' object.category.pk %}">
         Отмена
     </a>
   </button>
