--- a/geekshop/adminapp/templates/adminapp/products.html
+++ b/geekshop/adminapp/templates/adminapp/products.html
@@ -5,9 +5,9 @@
 {% block content %}
   <div class="products-list">
     <button class="new-product">
-      <a href="{% url 'admin:product_create' category.pk %}">Новый товар</a>
+      <a href="{% url 'admin:product_create' category %}">Новый товар</a>
     </button>
-    {% for object in objects %}
+    {% for object in object_list %}
       <div class="product-record {% if not object.is_active %}not_active {% endif %}">
         <img src="{{ object.image|media_folder_products }}" alt="{{ object.name }}">
         <div class="product-name">
