--- a/geekshop/authapp/templates/authapp/edit.html
+++ b/geekshop/authapp/templates/authapp/edit.html
@@ -6,11 +6,11 @@
   enctype="multipart/form-data" method="POST">
     {% csrf_token %}
     {{ edit_form.as_p }}
+    {{ profile_form.as_p }}
     <br>
     <input class="form-control" type="submit" value="Сохранить">
     </form>
-    <div class="user-avatar"><img src="/media/{{ user.avatar|default:'users_avatars/default.jpg' }}
-    "
+    <div class="user-avatar"><img src="/media/{{ user.avatar|default:'users_avatars/default.jpg' }}"
     class="user-avatar-img"></div>
     <button class="btn btn-round form-control last"><a href="{% url 'main' %}">На главную</a>
     </button>
