--- a/geekshop/mainapp/templates/mainapp/base.html
+++ b/geekshop/mainapp/templates/mainapp/base.html
@@ -11,12 +11,15 @@
       {% endblock %}
     </title>
     {% block css %}
+      <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
       <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
       <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">
       <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,700&display=swap" rel="stylesheet">
     {% endblock %}
 
     {% block js %}
+    <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     {% endblock %}
   </head>
   <body>
