--- a/geekshop/ordersapp/templates/ordersapp/order_list.html
+++ b/geekshop/ordersapp/templates/ordersapp/order_list.html
@@ -57,7 +57,7 @@
       </a>
     </button>
     <button class="btn btn-default btn-round">
-      <a href="{% url 'main' %}">
+      <a href="{% url 'ordersapp:order_create' %}">
         Новый
       </a>
     </button>
