--- a/geekshop/ordersapp/templates/ordersapp/base.html
+++ b/geekshop/ordersapp/templates/ordersapp/base.html
@@ -20,6 +20,7 @@
     {% block js %}
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/orders_scripts.js' %}"></script>
     {% endblock %}
 
   </head>
