--- a/geekshop/ordersapp/templates/ordersapp/order_form.html
+++ b/geekshop/ordersapp/templates/ordersapp/order_form.html
@@ -23,7 +23,7 @@
             {% endif %}
               <tr class="formset_row">
                 {% for field in form.visible_fields %}
-                  <td class="{% cycle 'td1' 'td2' 'td3' %} order formset_td">
+                  <td class="{% cycle 'td1' 'td2' 'td3' 'td4' %} order formset_td">
                     {% if forloop.first %}
                       {% for hidden in form.hidden_fields %}
                         {{ hidden }}
@@ -34,7 +34,7 @@
                         {{ field }}
                     {% else %}
                         {% if field.value %}
-                            <span class="orderitems-{{forloop.parentloop.couner0}}-price">
+                            <span class="orderitems-{{ forloop.parentloop.counter0 }}-price">
                                 {{ field.value }}
                             </span> руб.
                         {% endif %}
