--- a/geekshop/ordersapp/templates/ordersapp/base.html
+++ b/geekshop/ordersapp/templates/ordersapp/base.html
@@ -19,8 +19,9 @@
 
     {% block js %}
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/jquery.formset.js' %}"></script>
     <script src="{% static 'js/orders_scripts.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     {% endblock %}
 
   </head>
