Настроил инстурменты для отладки

--- a/geekshop/mainapp/templates/mainapp/includes/inc_mainmenu.html
+++ b/geekshop/mainapp/templates/mainapp/includes/inc_mainmenu.html
@@ -57,7 +57,7 @@
         {% endif %}
     </li>
     <li class="search-link">
-        <a href="#"><img src="{% static '/img/search.png' %}" class="search"></a>
+        <a href="#"><img src="{% static 'img/search.png' %}" class="search"></a>
     </li>
     <li class="basket">
         <a href="{% url 'basket:view' %}" class="">
