--- a/geekshop/mainapp/templates/mainapp/index.html
+++ b/geekshop/mainapp/templates/mainapp/index.html
@@ -38,9 +38,10 @@
                         <div class="hover-description">
                             <a href="{% url 'products:product' product.pk %}" class="hover-button">
                               <img src="{% static 'img/arrow.svg' %}" alt="" class="hover-button-arrow"></a>
+                            <h3 class="hover-category-name">{{ product.category.name }}</h3>
                             <h3 class="hover-header">{{ product.name }}</h3>
-                            <p class="hover-p"> {{ product.short_desc }}
-                            </p>
+                            <p class="hover-p"> {{ product.short_desc }}</p>
+                            <p class="hover-price">Цена: {{ product.price }} руб.</p>
                         </div>
                     </div>
                     {% endfor %}
