--- a/geekshop/ordersapp/templates/ordersapp/includes/inc_order_summary.html
+++ b/geekshop/ordersapp/templates/ordersapp/includes/inc_order_summary.html
@@ -5,13 +5,15 @@
       <div class="h4">Обновлен: {{ object.updated|date:"Y-m-d H:i:s" }}</div>
       <div class="h4">Статус: {{ object.get_status_display }}</div>
    <hr>
+   {% with object_summary=object.get_summary %}
    <div class="h4">
      Общее количество товаров:
-     <span class="order_total_quantity">{{ object.get_total_quantity }}</span>
+     <span class="order_total_quantity">{{ object_summary.total_quantity }}</span>
    </div>
    <div class="h3">
-    Общая стоимость: <span class="order_total_cost">{{ object.get_total_cost }}</span> руб
+    Общая стоимость: <span class="order_total_cost">{{ object_summary.total_cost }}</span> руб.
    </div>
+   {% endwith %}
 {% else %}
   <div class="h2">Новый заказ</div>
   <hr>
