--- a/geekshop/adminapp/templates/adminapp/includes/inc_menu.html
+++ b/geekshop/adminapp/templates/adminapp/includes/inc_menu.html
@@ -6,8 +6,9 @@
     <a href="{% url 'admin:users' %}" class="{% if request.resolver_match.url_name == 'users' %}active{% endif %}">Пользователи</a>
   </li>
   <li>
-    <a href="{% url 'admin:categories' %}" class="{% if request.resolver_match.url_name == 'categories' or category.name %}active{% endif %}">
-      Категории{% if category %}: <span>{{ category.name }}</span>{% endif %}
+    <a href="{% url 'admin:categories' %}"
+      class="{% if request.resolver_match.url_name == 'categories' or category.name %}active{% endif %}">
+      Категория{% if category %}: <span>{{ category }}</span>{% endif %}
     </a>
   </li>
 </ul>
